# Technyx

./: .gitmodules  CMakeLists.txt  README.md  doc_template.xml
.github/workflows/: cmake.yml  release.yaml
arcbank/: CMakeLists.txt  arc.hpp  arc_anim.cpp  arc_extract.cpp
archive/: CMakeLists.txt  cdfiles_extract.cpp
dev/: CMakeLists.txt  arc_decompress.cpp  cdfiles.csv  lzo1x.c  lzo1x.h
text/: CMakeLists.txt  lda_to_txt.cpp
